--- a/api/package.json
+++ b/api/package.json
@@ -8,8 +8,8 @@
     "dev": "nodemon src/index.ts"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Rogelio Samuel <@sam_621>",
+  "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
     "nodemon": "^2.0.20",
