--- a/package.json
+++ b/package.json
@@ -8,9 +8,5 @@
   },
   "keywords": [],
   "author": "Rogelio Samuel <@sam_621>",
-  "license": "MIT",
-  "devDependencies": {
-    "@types/node": "^18.15.9",
-    "path": "^0.12.7"
-  }
+  "license": "MIT" 
 }
