--- a/web/package.json
+++ b/web/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^13.2.4",
+    "@types/node": "^18.15.10",
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
     "@typescript-eslint/eslint-plugin": "^5.55.0",
@@ -43,6 +44,7 @@
     "eslint-plugin-sonarjs": "^0.18.0",
     "eslint-plugin-testing-library": "^5.10.2",
     "husky": "^8.0.3",
+    "path": "^0.12.7",
     "postcss": "^8.4.18",
     "prettier": "^2.8.4",
     "tailwind-merge": "^1.10.0",
