--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
   },
   "keywords": [],
   "author": "Rogelio Samuel <@sam_621>",
-  "license": "MIT" 
+  "license": "MIT" ,
+  "gacp": {
+    "push": false
+  }
 }
