--- a/web/package.json
+++ b/web/package.json
@@ -13,7 +13,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
-    "socket.io-client": "^4.6.1"
+    "socket.io-client": "^4.6.1",
+    "use-media": "^1.4.0"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^13.2.4",
