--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -29,6 +29,7 @@
       "@/types/*": ["./src/core/types/*"],
       "@/utils/*": ["./src/core/utils/*"],
       "@/gql/*": ["./src/core/gql/*"],
+      "@/sockets/*": ["./src/core/sockets/*"],
 
       "@/modules/*": ["./src/ui/modules/*"],
       "@/shared/*": ["./src/ui/shared/*"],
