feat(store):  update moves

--- a/web/.vscode/settings.json
+++ b/web/.vscode/settings.json
@@ -11,5 +11,7 @@
   "[scss]": {
     "editor.defaultFormatter": "vscode.css-language-features"
   },
-  "cSpell.words": []
+  "cSpell.words": [
+    "reduxjs"
+  ]
 }
