--- a/api/package.json
+++ b/api/package.json
@@ -6,13 +6,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/index.ts",
-    "build": "tsc",
+    "build": "yarn tsc",
     "start": "node dist/index.js"
   },
   "keywords": [],
   "author": "Rogelio Samuel <@sam_621>",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "nodemon": "^2.0.20",
     "socket.io": "^4.5.4"
